# Shelf

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 16caea5965e2_add_stored_filename_field_to_book_schema.py  1f45f520e5c3_add_preferences_field_to_user_schema.py  20250617_add_book_status.py  2a0f43ab7089_change_cover_field_type.py  3e0f3b7644db_initial_postgresql_schema.py  47c4e65fca3b_add_file_size_bytes_to_books_table.py  5fcc5369f9eb_add_users_schema.py  6ce246100fed_add_user_foreign_key_to_book_model.py  983f05a87193_switch_to_crockford_base32_string_ids_.py  999ccf5cba3b_books_table.py  9d6109349e1e_update_books_schema_fields.py  a9d8b686c874_add_title_field_to_storage_schema.py  ad2001beb0f6_add_storage_table.py  ce16b23bf3e1_create_models.py  dab35120d238_add_users_schema.py  dcfff0dbc04d_make_book_covers_list_non_nullable.py  e8c49b51e486_create_books_and_users_schemas.py  f6d561651910_add_books_table.py
api/v1/routes/: auth.py  books.py  ebooks.py  shelves.py  storage.py
api/v1/schemas/: book_schemas.py  shelf_schemas.py  storage_schemas.py  user_schemas.py
config/redis/: redis.conf
core/: auth.py  celery.py  celery_app.py  config.py  crockford.py  logger.py
database/: __init__.py  book_crud.py  database.py  db.py  shelf_crud.py  storage_crud.py
db/: database.py  ebook_crud.py
models/: book.py  domain_models.py  shelf.py  storage.py  user.py
parsers/: base_parser.py  epub_parser.py  pdf_parser.py
services/: book_service.py  ebook_service.py  exceptions.py  filesystem_storage.py  minio_storage.py  shelf_service.py  storage_backend.py
services/storage/: __init__.py  filesystem_storage.py  minio_storage.py  storage_backend.py
tests/: test_api_basic.py  test_auth_api.py  test_auth_api_full.py  test_books_api.py  test_books_api_full.py  test_root.py  test_storage_api.py  test_storage_api_full.py
